--- a/news-events.html
+++ b/news-events.html
@@ -67,48 +67,7 @@
         <img src="images/exp-cele.jpg" alt="Campus celebration" />
     </section>
 
-    <main><!----
-        <section class="content-section">
-            <h2 class="section-title">Top stories</h2>
-            <div class="card-grid">
-                <article class="card">
-                    <img src="images/stdcon1.jpg" alt="Students presenting" />
-                    <h3>PNGC hosts Highlands Youth Convention</h3>
-                    <p>More than 700 young leaders gathered for prayer, leadership boot camps and innovation challenges, with keynote sessions broadcast live on Radio Maria PNG.</p>
-                    <p><strong>Published:</strong> 12 July 2024</p>
-                </article>
-                <article class="card">
-                    <img src="images/carexpo2.jpg" alt="Career expo" />
-                    <h3>Career Expo connects students to employers</h3>
-                    <p>35 organisations, including Catholic Health Services and Port Moresby SMEs, offered internships, scholarships and graduate opportunities.</p>
-                    <p><strong>Published:</strong> 30 June 2024</p>
-                </article>
-                <article class="card">
-                    <img src="images/unistaffs.jpg" alt="Staff" />
-                    <h3>Faculty research wins Pacific award</h3>
-                    <p>Lecturers presented action research on trauma-informed teaching and were recognised by the Association of Pacific Rim Universities.</p>
-                    <p><strong>Published:</strong> 18 May 2024</p>
-                </article>
-            </div>
-        </section>
-
-        <section class="content-section">
-            <h2 class="section-title">Upcoming events</h2>
-            <div class="event-list">
-                <article class="event-card">
-                    <strong>Orientation Week</strong>
-                    <p>24 – 28 February 2025 | Campus tour, blessing of hands and service outreach.</p>
-                </article>
-                <article class="event-card">
-                    <strong>Port Moresby Research Forum</strong>
-                    <p>18 April 2025 | Presentations on agriculture, health and peace-building innovations.</p>
-                </article>
-                <article class="event-card">
-                    <strong>Caritas Outreach</strong>
-                    <p>June 2025 | Student teams deliver literacy and health workshops in Kandep and Kompiam.</p>
-                </article>
-            </div>
-        </section>-->
+    <main>
 
         <section class="content-section">
             <h2 class="section-title">Cultural Event at the Scool</h2>
