--- a/parents.html
+++ b/parents.html
@@ -67,49 +67,7 @@
         <img src="images/stdcon2.jpg" alt="Parents visiting PNGC" />
     </section>
 
-    <main><!----
-        <section class="content-section">
-            <h2 class="section-title">Quick links</h2>
-            <div class="card-grid">
-                <article class="card">
-                    <h3>Academic calendar</h3>
-                    <p>Key dates for classes, exams, holidays and orientation activities.</p>
-                    <a href="documents/PNGC-academic-calendar.pdf" class="btn secondary">View calendar</a>
-                </article>
-                <article class="card">
-                    <h3>Fees & payments</h3>
-                    <p>Learn about tuition plans, payment deadlines and sponsorship options.</p>
-                    <a href="documents/PNGC-fees-2025.pdf" class="btn secondary">Download fee schedule</a>
-                </article>
-                <article class="card">
-                    <h3>Student wellbeing</h3>
-                    <p>Access counselling services, chaplaincy contacts and health clinic information.</p>
-                    <a href="contact.html" class="btn secondary">Talk to a counsellor</a>
-                </article>
-            </div>
-        </section>-
-
-        <section class="content-section">
-            <h2 class="section-title">Frequently asked questions</h2>
-            <div class="card-grid">
-                <article class="card">
-                    <h3>What items should my student bring?</h3>
-                    <p>Provide bedding, personal toiletries, formal wear for liturgies, laptop/tablet and any prescribed medication. Dormitories supply desks, lockers and study lamps.</p>
-                </article>
-                <article class="card">
-                    <h3>How do I send care packages?</h3>
-                    <p>Use the campus postal address or send with PMV drivers travelling to Port Moresby. Please label packages clearly with the student’s full name and dormitory.</p>
-                </article>
-                <article class="card">
-                    <h3>Can families visit?</h3>
-                    <p>Yes! Weekend visiting hours are 10am – 4pm. Please check in at the security gate and bring ID. Overnight stays require approval.</p>
-                </article>
-                <article class="card">
-                    <h3>How do I track progress?</h3>
-                    <p>Parents receive quarterly progress reports via email. You can also request meetings with lecturers or the dean of students.</p>
-                </article>
-            </div>
-        </section>-->
+    <main>
 
         <section class="content-section">
             <h2 class="section-title">Stay connected</h2>
