--- a/history.html
+++ b/history.html
@@ -72,7 +72,8 @@
         <section class="content-section">
             <h2 class="section-title">Will be published soon</h2>
             <div class="timeline">
-                <div class="timeline-item"><!----
+                <div class="timeline-item">
+                    <!----
                     <h3>1978 – Consultation phase</h3>
                     <p>Catholic Archdiocese of Port Moresby, National Capital District Commission and Caritas Australia conducted feasibility studies to establish a Catholic tertiary college.</p>
                 </div>
