Updated website content and design

--- a/msfina.html
+++ b/msfina.html
@@ -61,39 +61,46 @@
 
     <main>
         <section class="profile-hero">
-            <img src="images/carexpo2.jpg" alt="Portrait of Mrs. Joyce Tangil" />
+            <img src="images/msfina.PNG" alt="Portrait of Mrs. Margaret Koko Fina" />
             <div class="bio">
                 <p class="badge">Faculty spotlight</p>
-                <h1>Mrs. Joyce Tangil</h1>
-                <p class="role">Business &amp; Governance</p>
+                <h1>Mrs. Margaret Koko Fina</h1>
+                <p class="role">Head of Academics - PCU in partnership with WCC</p>
                 <div class="meta">
                     <span><i class="fas fa-graduation-cap"></i> DBA</span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:joyce.tangil@pngcihe.ac.pg">joyce.tangil@pngcihe.ac.pg</a></span>
+                    <span><i class="fas fa-envelope"></i> <a href="mailto:magretkfina@gmail.com"></a></span>
                 </div>
-                <p class="quote"><i class="fas fa-quote-left"></i>Chartered accountant guiding social enterprise ventures and ethical leadership.</p>
+                <p class="quote"><i class="fas fa-quote-left"></i>Administration and ethical leadership.<i class="fas fa-quote-right"></i></p>
                 <ul class="pill-list">
-                    <li>Financial stewardship</li>
-                    <li>Governance</li>
+
+                    <li>Governance &amp; administration</li>
                     <li>Ethical leadership</li>
-                    <li>Entrepreneurship</li>
+                  
                 </ul>
             </div>
         </section>
 
         <section class="content-section profile-section">
-            <h2 class="section-title">Linking business and mission</h2>
-            <p>Joyce equips students with practical financial skills rooted in integrity. Her coursework highlights social enterprise models that uplift communities while sustaining institutional growth.</p>
+            <h2 class="section-title">About Magret Koko Fina</h2>
+            <p>Margaret Koko Fina is a seasoned and visionary educational leader with vast experience in
+teaching, academic management, and institutional development, defined by a strong
+commitment to academic excellence, inclusive learning, and strategic growth. In her current
+role as Head of Academics at the Philippines Christian University (PCU) in partnership with
+Waigani Christian College (WCC) and soon to be PNG Christian Institute of Higher Education
+(PNGCIHE), her primary focus is the strategic oversight and leadership of the Early Childhood
+Care and Education (ECCE) programme. She brings deep expertise in curriculum design and
+teacher training, ensuring ECCE program development, compliance, and academic
+accreditation through DHERST to establish strong, play-based learning frameworks essential
+for a child's cognitive, social, and emotional development in the PNG context. A trained and
+innovative practitioner, Ms. Fina excels at coaching and team building, approaching complex
+situations with diplomacy and professionalism, and is committed to fostering a culture of
+collaboration and mutual respect. Her academic background includes a Master of Education
+Advanced (TESOL) from the University of Wollongong and foundational qualifications in
+Language and Literature, while she currently pursues a Master of Research Methodology at
+Divine Word University.</p>
         </section>
 
-        <section class="content-section">
-            <h2 class="section-title">Focus modules</h2>
-            <ul class="pill-list">
-                <li>Strategic budgeting</li>
-                <li>Audit readiness</li>
-                <li>Entrepreneurial startups</li>
-                <li>Ethics in finance</li>
-            </ul>
-        </section>
+        
     </main>
 
     <footer class="site-footer">
