--- a/msparu.html
+++ b/msparu.html
@@ -70,7 +70,7 @@
                     <span><i class="fas fa-graduation-cap"></i> Education Leader</span>
                     <span><i class="fas fa-envelope"></i> <a href="mailto:eoparu1@gmail.com">eoparu1@gmail.com</a></span>
                 </div>
-                <p class="quote"><i class="fas fa-quote-left"></i>A Dedicated Leader in Early Childhood Education (Curriculum Developer - PNGCIHE - ECCE)</p>
+                <p class="quote"><i class="fas fa-quote-left"></i>A Dedicated Leader in Early Childhood Education (Curriculum Developer - PNGCIHE - ECCE)<i class="fas fa-quote-right"></i></p>
                 <ul class="pill-list">
                        <li>Curriculum Developer</li>
                     <li>Early Childhood Educator</li>
