--- a/pentalyne.html
+++ b/pentalyne.html
@@ -71,7 +71,7 @@
                     <span><i class="fas fa-envelope"></i> <a href="mailto:addmission@pngcu.ac.pg"></a>Email</span>
                 </div>
                 <p class="quote"><i class="fas fa-quote-left"></i>Results-oriented Human Resource 
-Associate serving the tertiary education sector at Waigani Christian College.</p>
+Associate serving the tertiary education sector at Waigani Christian College.<i class="fas fa-quote-right"></i></p>
                 <ul class="pill-list">
                     <li></li>
                     <li></li>
