--- a/msbitas.html
+++ b/msbitas.html
@@ -70,7 +70,7 @@
                     <span><i class="fas fa-graduation-cap"></i> </span>
                     <span><i class="fas fa-envelope"></i> <a href="mailto:addmission@pngcu.ac.pg"></a></span>
                 </div>
-                <p class="quote"><i class="fas fa-quote-left"></i>Leads residences, student leadership, and wellbeing programs rooted in care.</p>
+                <p class="quote"><i class="fas fa-quote-left"></i>Leads residences, student leadership, and wellbeing programs rooted in care.<i class="fas fa-quote-right"></i></p>
                 <ul class="pill-list">
                     <li>Residence life</li>
                     <li>Wellbeing &amp; safety</li>
