Updated website content and design

--- a/benjamin.html
+++ b/benjamin.html
@@ -67,7 +67,7 @@
                 <h1>Hon. MP Mr. Benjamin Mul</h1>
                 <p class="role">The Director-Papua New Guinea Christian Institute of Higher Education</p>
                 <div class="meta">
-                    <span><i class="fas fa-graduation-cap"></i> Masters in Business and Administration</span>
+                    <span><i class="fas fa-graduation-cap"></i></span>
                     <span><i class="fas fa-envelope"></i> <a href="mailto:admission@pngcu.ac.pg"></a></span>
                 </div>
                 <p class="quote"><i class="fas fa-quote-left"></i>From Humble Beginnings to Educating Papua New Guinea</p>
