--- a/msfina.html
+++ b/msfina.html
@@ -63,11 +63,11 @@
         <section class="profile-hero">
             <img src="images/msfina.PNG" alt="Portrait of Mrs. Margaret Koko Fina" />
             <div class="bio">
-                <p class="badge">Faculty spotlight</p>
+                <p class="badge"></p>
                 <h1>Mrs. Margaret Koko Fina</h1>
                 <p class="role">Head of Academics - PCU in partnership with WCC</p>
                 <div class="meta">
-                    <span><i class="fas fa-graduation-cap"></i> DBA</span>
+                    <span><i class="fas fa-graduation-cap"></i> </span>
                     <span><i class="fas fa-envelope"></i> <a href="mailto:magretkfina@gmail.com"></a></span>
                 </div>
                 <p class="quote"><i class="fas fa-quote-left"></i>Administration and ethical leadership.<i class="fas fa-quote-right"></i></p>
