--- a/msparu.html
+++ b/msparu.html
@@ -68,7 +68,7 @@
                 <p class="role">HR Associate &amp; Curriculum Developer</p>
                 <div class="meta">
                     <span><i class="fas fa-graduation-cap"></i> Education Leader</span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:eoparu1@gmail.com">eoparu1@gmail.com</a></span>
+                    <span><i class="fas fa-envelope"></i> <a href="mailto:eoparu1@gmail.com"></a></span>
                 </div>
                 <p class="quote"><i class="fas fa-quote-left"></i>A Dedicated Leader in Early Childhood Education (Curriculum Developer - PNGCIHE - ECCE)<i class="fas fa-quote-right"></i></p>
                 <ul class="pill-list">
