--- a/tedalau.html
+++ b/tedalau.html
@@ -68,7 +68,7 @@
                 <p class="role">Administration & HR Management</p>
                 <div class="meta">
                     <span><i class="fas fa-graduation-cap"></i> </span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:pcu.tedalau@gmail.com">Email</a></span>
+                    <span><i class="fas fa-envelope"></i> <a href="mailto:pcu.tedalau@gmail.com"></a></span>
                 </div>
                 <p class="quote"><i class="fas fa-quote-left"></i>Oversees admissions, certification, human resource development, and administration <i class="fas fa-quote-right"></i></p>
                 <ul class="pill-list">
