--- a/pentalyne.html
+++ b/pentalyne.html
@@ -68,7 +68,7 @@
                 <p class="role">Human Resource Associate</p>
                 <div class="meta">
                     <span><i class="fas fa-graduation-cap"></i> </span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:addmission@pngcu.ac.pg"></a>Email</span>
+                    <span><i class="fas fa-envelope"></i> <a href="mailto:addmission@pngcu.ac.pg"></a></span>
                 </div>
                 <p class="quote"><i class="fas fa-quote-left"></i>Results-oriented Human Resource 
 Associate serving the tertiary education sector at Waigani Christian College.<i class="fas fa-quote-right"></i></p>
