Update website page

--- a/team-profile.html
+++ b/team-profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PNG CIHE | Team Profiles</title>
+    <title>Waigani Christian College-Tertiary Education</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/site.css" />
 </head>
@@ -13,8 +13,8 @@
             <a class="logo-group" href="index.html">
                 <img src="images/logo.png" alt="Papua New Guinea Christian Institute of Higher Education crest" />
                 <div>
-                    <p class="logo-title">Papua New Guinea Christian Institute of Higher Education</p>
-                    <p class="logo-verse">Matthew 6:33 — "But seek first His kingdom and His righteousness, and all these things will be given to you as well."</p>
+                    <p class="logo-title">Waigani Christian College-Tertiary Education</p>
+                    <p class="logo-verse">Matthew 6:33—"But seek ye first the kingdom of God, and His righteousness; and all these things shall be added unto you."</p>
                 </div>
             </a>
             <button class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
@@ -32,7 +32,7 @@
                         <li><a href="core.html">Core Values</a></li>
                         <li><a href="history.html">History</a></li>
                         <li><a href="director.html">Director's Message</a></li>
-                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="team.html">Leadership Team</a></li>
                         <li><a href="index.html#stories">Images &amp; Videos</a></li>
                     </ul>
                 </li>
@@ -41,6 +41,7 @@
                     <ul class="submenu">
                         <li><a href="programs.html">Programs</a></li>
                         <li><a href="admissions.html">Admissions</a></li>
+                        <li><a href="learning.html">E-Learning</a></li>
                     </ul>
                 </li>
                 <li class="has-submenu">
@@ -51,7 +52,7 @@
                         <li><a href="parents.html">Parents</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html" class="btn-link">Contact</a></li>
+                <li><a href="contact.html" class="btn-link">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -173,50 +174,65 @@
         </section>
     </main>
 
-    <footer class="site-footer">
+   <footer class="site-footer">
         <div class="footer-grid">
             <div>
-                <h3>Papua New Guinea Christian Institute of Higher Education</h3>
-                <p>Faith-filled tertiary education for the Papua New Guinea & International Communities since 1981.</p>
+                <h3>Find Us</h3>
+                <p></p>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/?ref=homescreenpwa" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/share/g/1KCUh8WdS6/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://x.com/" target="_blank" rel="noopener" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.youtube.com/channel/UCST6gzxMCCitWLwJFh7Znrg" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
+                <div>
+                    <div>
+                    <h3></h3>
+                    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3935.
+                    9574512382046!2d147.1736830738835!3d-9.42513389065288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x690230bb3eef64ad%3A0xd6e103934061181a!2sWaigani%20Christian%20School!5e0!3m2!1sen!2spg!4v1763279868073!5m2!1sen!2spg" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing Port Moresby"></iframe>
+                </div>
+                    
+                </div>
             </div>
             <div>
-                <h3>Visit us</h3>
+                <h3>Contact Us</h3>
                 <ul class="footer-links">
-                    <li>Papua New Guinea Christian Institute of Higher Education Campus, Port Moresby</li>
-                    <li>Port Moresby, Papua New Guinea</li>
-                    <li>Phone: 7105 9183 / 7845 4860</li>
-                    <li>Email: admission@pngcu.ac.pg</li>
+                    <li>Waigani Christian College-Tertiary Education</li>
+                    <li>Port Moresby,Papua New Guinea</li>
+                    <li>Phone: 7105 9837 / 7845 4860</li>
+                    <li>Email: <a href="mailto:admission@pngcu.ac.pg">admission@pngcu.ac.pg</a></li>
                 </ul>
             </div>
             <div>
-                <h3>Quick links</h3>
+                <h3>Useful Links</h3>
                 <ul class="footer-links">
                     <li><a href="admissions.html">Admissions</a></li>
                     <li><a href="news-events.html">News & Events</a></li>
-                    <li><a href="parents.html">Parent resources</a></li>
+                    <li><a href="parents.html">Parent Resources</a></li>
                     <li><a href="contact.html">Contact & Directions</a></li>
+                    <li><a href="https://pcu.edu.ph/">Philippine Christian University</a></li>
+                    <li><a href="https://myportal.pcu.edu.ph/">PCU MyPortal</a></li>
+                    <li><a href="https://apply.dherst.gov.pg">DHERST NOAS</a></li>
+                    <li><a href="https://bluebook.pcu.edu.ph/">PCU Learning Management System</a></li>
+
                 </ul>
             </div>
             <div>
-                <h3>Stay updated</h3>
+                <h3>Stay Updated</h3>
                 <form class="newsletter-form">
                     <label for="newsletter-email">Email</label>
                     <input type="email" id="newsletter-email" placeholder="name@example.com" required />
-                    <button type="submit">Join mailing list</button>
+                    <button type="submit">Join Mailing List</button>
                 </form>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Papua New Guinea Christian Institute of Higher Education. All rights reserved.</p>
+            <p>Copyright&copy;2025 Waigani Christian College-Tertiary Education. All rights reserved.</p>
         </div>
     </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
+
